# Adduce

./: .gitignore  CNAME  Cargo.toml  README.md  gen.sh  index.html  install.sh  text.html  text.md  text.txt
.fleet/: run.json
.github/: FUNDING.yml
auto/: generate.sh  install.sh
config/: conf.toml  example.toml  style.css  text.md
config/global/: head.html  style.css
config/global/elements/: footer.html  head.html  navbar.html
config/global/style/: standard.css  type.css
config/index/: about.md  conf.toml
config/pages/404/: 404.md  conf.toml
config/pages/donate/: conf.toml  donate.md
config/pages/index/: conf.toml  index.md
docs/: 404.html  donate.html  index.html
docs/style/: blog.css  blogstyle.css  colours.css  footer.css  images.css  links.css  navbar.css  standardstyle.css
feed/: conf.toml
src/: lib.rs  main.rs
src/common/: fs.rs  result.rs
src/config/: html.rs  toml.rs
src/data/: html.rs  toml.rs
src/feed/: apps.rs  cli.rs  old.rs
src/html/: feed.rs  md.rs
src/lib/: feed.rs  filesystem.rs  html.rs  html2.rs  markdown.rs  parse.rs  rfs.rs  rss.rs
src/structs/: config.rs  html.rs  html_conf.rs  toml_conf.rs
