[package]
name = "adduce"
version = "0.1.6"
authors = ["Declan Chidlow <vale@vale.rocks>", "ToastXC <contact@toastxc.xyz>"]
edition = "2021"
description = "A blazingly fast static site generator."
homepage = "https://adduce.vale.rocks"
repository = "https://github.com/DeclanChidlow/Adduce"
license = "LGPL-3.0-or-later"
keywords = ["cli", "generator", "static", "ssg", "site"]
categories = [
  "command-line-utilities",
  "web-programming",
  "parsing",
  "template-engine",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
optional_struct = "0.4"
toml = "0.8"
pulldown-cmark = "0.11"
rss = "2.0"
